--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -30,9 +30,9 @@
 
          <nav class="navbar">
             <a href="#home">home</a>
-            <a href="#admins">admins</a>
-            <a href="#teachers">teachers</a>
-            <a href="#students">students</a>
+            <a href="login.html">admins</a>
+            <a href="login.html">teachers</a>
+            <a href="login.html">students</a>
 
             <a href="#about">about us</a>
             <a href="#contact">contact us</a>
@@ -54,7 +54,7 @@
 
          <div class="content">
             <h3>online <span>education</span></h3>
-            <a href="#" class="btn">Create accout</a>
+            <a href="signupAdmin.html" class="btn">Create accout</a>
          </div>
 
          <div class="image">
@@ -495,7 +495,7 @@
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="js/script.js"></script>
+   <script src="script.js"></script>
 
 </body>
 
