--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
 
       <section class="flex">
 
-         <a href="#home" class="logo"><img src="logo.png" height="40" width="40"><b class="edu"> EduMate</b></a>
+         <a href="#home" class="logo"><img src="logocopy.png" height="40" width="40"><b class="edu"> EduMate</b></a>
 
+         <form action="" class="search-bar">
+            <input type="text" placeholder="Search" name="q">
+            <button type="submit"><img src="search.png"></button>
+         </form>
          <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#admins">admins</a>
-            <a href="#teachers">teachers</a>
-            <a href="#students">students</a>
-
-            <a href="#about">about us</a>
-            <a href="#contact">contact us</a>
+            <a href="#home">Home</a>
+            <a href="#admins">Admins</a>
+            <a href="#teachers">Teachers</a>
+            <a href="#students">Students</a>
+            <a href="#about">About us</a>
+            <a href="#contact">Contact us</a>
          </nav>
 
          <div id="menu-btn" class="fas fa-bars"></div>
@@ -53,8 +56,9 @@
       <div class="row">
 
          <div class="content">
-            <h3>online <span>education</span></h3>
-            <a href="#" class="btn">Create accout</a>
+            <h3>Online <span>Education</span></h3>
+            <a href="#" class="btn">Create account</a>
+            <a href="#" class="btn">Log in</a>
          </div>
 
          <div class="image">
@@ -122,7 +126,7 @@
          </div>
 
          <div class="content">
-            <h3>why choose us?</h3>
+            <h3>Why choose us?</h3>
             <p>By this system any institute can register themselves and add their courses in the website wherein
                teachers and students can interact with each other and at the end of the compeltion of the course ,
                institute can conduct their online examination .
@@ -140,7 +144,7 @@
 
    <section class="courses" id="courses">
 
-      <h1 class="heading">our <span>resources</span></h1>
+      <h1 class="heading">Our <span>Resources</span></h1>
 
       <div class="swiper course-slider">
 
@@ -148,7 +152,7 @@
 
             <div class="swiper-slide slide">
                <img src="images/course-1.svg" alt="">
-               <h3>web development</h3>
+               <h3>Web Development</h3>
                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, repellat!</p>
             </div>
 
@@ -282,7 +286,7 @@
 
    <section class="reviews" id="reviews">
 
-      <h1 class="heading"> student's <span>reviews</span></h1>
+      <h1 class="heading"> Student's <span>Reviews</span></h1>
 
       <div class="swiper reviews-slider">
 
@@ -410,7 +414,7 @@
 
    <section class="contact" id="contact">
 
-      <h1 class="heading"><span>contact</span> us</h1>
+      <h1 class="heading"><span>Contact</span> Us</h1>
 
       <div class="row">
 
@@ -419,14 +423,14 @@
          </div>
 
          <form action="" method="post">
-            <span>your name</span>
+            <span>Your name</span>
             <input type="text" required placeholder="enter your full name" maxlength="50" name="name" class="box">
-            <span>your email</span>
-            <input type="email" required placeholder="enter your valie email" maxlength="50" name="email" class="box">
-            <span>your number</span>
-            <input type="number" required placeholder="enter your valie number" max="9999999999" min="0" name="number"
+            <span>Your email</span>
+            <input type="email" required placeholder="enter your valid email" maxlength="50" name="email" class="box">
+            <span>Your number</span>
+            <input type="number" required placeholder="enter your valid number" max="9999999999" min="0" name="number"
                class="box" onkeypress="if(this.value.length == 10) return false;">
-            <span>your designation</span>
+            <span>Your designation</span>
             <select name="couses" class="box" required>
                <option value="" disabled selected>select one --</option>
                <option value="admin">admin</option>
@@ -439,14 +443,14 @@
             <option value="data analysis">data analysis</option>
             <option value="artificial intelligence">artificial intelligence</option> -->
             </select>
-            <span>select gender</span>
+            <span>Select gender</span>
             <div class="radio">
                <input type="radio" name="gender" value="male" id="male">
-               <label for="male">male</label>
+               <label for="male">Male</label>
                <input type="radio" name="gender" value="female" id="female">
-               <label for="female">female</label>
+               <label for="female">Female</label>
             </div>
-            <input type="submit" value="send message" class="btn" name="send">
+            <input type="submit" value="Send message" class="btn" name="send">
          </form>
 
       </div>
