login & register done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
          <div class="content">
             <h3>online <span>education</span></h3>
-            <a href="signupAdmin.html" class="btn">Create accout</a>
+            <a href="createpopup.html" class="btn">Create accout</a>
          </div>
 
          <div class="image">
