login & registration done

--- a/login.html
+++ b/login.html
@@ -16,6 +16,9 @@
 </head>
 <body>
 
+   
+
+
 
     <div class="container">
         <div class="forms">
@@ -60,7 +63,7 @@
 
 
             <!-- Registration wala Form -->
-            <div class="form signup">
+            <!-- <div class="form signup">
                 <span class="title">Registration</span>
 
                 <form action="#">
@@ -99,9 +102,18 @@
                         <a href="#" class="text login-link">Login Now</a>
                     </span>
                 </div>
-            </div>
+            </div> -->
+
+
+
         </div>
     </div>
+
+
+
+
+    
+
 
     <script src="login.js"></script>
 </body>
