--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 
                 <div class="login-signup">
                     <span class="text">Not a member?
-                        <a href="#" class="text signup-link">Signup Now</a>
+                        <a href="createpopup.html" class="text signup-link">Signup Now</a>
                     </span>
                 </div>
             </div>
