--- a/signupAdmin.html
+++ b/signupAdmin.html
@@ -1,13 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
 
-    <link rel="stylesheet" href="login1.css">
-   </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+  <link rel="stylesheet" href="css/login1.css">
+</head>
+
 <body>
   <div class="wrapper">
     <h2>Registration</h2>
@@ -37,4 +38,5 @@
     </form>
   </div>
 </body>
+
 </html>
