--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -499,7 +499,7 @@
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 
    <!-- custom js file link  -->
-   <script src="script.js"></script>
+   <script src="js/script.js"></script>
 
 </body>
 
