Teacher partially completed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
 
          <div class="content">
-            <h3>online <span>education</span></h3>
+            <h3>Online <span>Education</span></h3>
             <a href="createpopup.html" class="btn">Create Account</a>
          </div>
 
