--- a/teacher.html
+++ b/teacher.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!----======== CSS ======== -->
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/teacher.css">
 
     <!----===== Iconscout CSS ===== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
-    <title>Admin Dashboard Panel</title>
+    <title>Teacher Dashboard Panel</title>
 </head>
 
 <body>
@@ -36,19 +36,12 @@
                         <i class="uil uil-estate"></i>
                         <span class="link-name">Dashboard</span>
                     </a></li>
-                <li><a href="#">
-                        <i class="uil uil-user-circle"></i>
-                        <span class="link-name">Teachers</span>
-                    </a></li>
 
                 <li><a href="#">
                         <i class="uil uil-user"></i>
                         <span class="link-name">Students</span>
                     </a></li>
-                <li><a href="#">
-                        <i class="uil uil-books"></i>
-                        <span class="link-name">Courses</span>
-                    </a></li>
+
                 <li><a href="#">
                         <i class="uil uil-edit-alt"></i>
                         <span class="link-name">Exam</span>
@@ -56,6 +49,10 @@
                 <li><a href="#">
                         <i class="uil uil-setting"></i>
                         <span class="link-name">Settings</span>
+                    </a></li>
+                <li><a href="#">
+                        <i class="uil uil-setting"></i>
+                        <span class="link-name">Clear Doubts</span>
                     </a></li>
             </ul>
 
@@ -88,33 +85,24 @@
                 <input type="text" placeholder="Search here...">
             </div> -->
 
-
             <ul class="nav-linkss">
                 <li><a href="index.html">Home</a></li>
                 <!-- <li class="center"><a href="#">Admin</a></li> -->
-                <li class="upward"><a href="login.html">Teachers</a></li>
-                <li class="forward"><a href="login.html">Students</a></li>
+                <!-- <li class="upward"><a href="login.html">Teachers</a></li> -->
+                <!-- <li class="forward"><a href="login.html">Students</a></li> -->
                 <li class="forward"><a href="#">About Us</a></li>
                 <li class="forward"><a href="#">Contact Us</a></li>
             </ul>
 
-            <!-- <img src="images/profile.jpg" alt=""> -->
-
-
-
-
-
-
-
-
             <img src="profile.jpg" onclick="settingsMenuuToggle()">
+
             <!-- <h2 class="hu">Admin</h2> -->
             <div class="settings-menuu">
                 <div class="settings-menuu-inner">
                     <div class="user-profile">
                         <!-- <img src="images/dp3.jpg"> -->
                         <div>
-                            <span>User Admin</span>
+                            <span>User Teacher</span>
                             <!-- <p class="text-bold">Akriti Accepted your friend request</p> -->
                             <!-- <small class="text-muted">2 MINUTES AGO</small> -->
                         </div>
@@ -142,23 +130,23 @@
                         <span class="number">1,050</span>
                     </div>
                     <div class="box box2">
-                        <span class="text">Total Teachers</span>
-                        <span class="number">40</span>
+                        <span class="text">Exams Completed</span>
+                        <!-- <span class="number">40</span> -->
                     </div>
                     <div class="box box3">
-                        <span class="text">Total Courses</span>
-                        <span class="number">20</span>
+                        <span class="text">Upcoming Exams</span>
+                        <!-- <span class="number">20</span> -->
                     </div>
 
-                    <div class="box box4">
+                    <!-- <div class="box box4">
                         <span class="text">Exam</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="js/admin.js"></script>
+    <script src="js/teacher.js"></script>
 </body>
 
 </html>
