--- a/teacher.html
+++ b/teacher.html
@@ -51,7 +51,7 @@
                         <span class="link-name">Settings</span>
                     </a></li>
                 <li><a href="#">
-                        <i class="uil uil-setting"></i>
+                        <i class="uil uil-question"></i>
                         <span class="link-name">Clear Doubts</span>
                     </a></li>
             </ul>
