--- a/10_boards.html
+++ b/10_boards.html
@@ -12,6 +12,7 @@
     .bc{
     background-color : #000000;
 }
+
 </style>
 
 
@@ -20,7 +21,7 @@
     <div class = "container">
         <div class = "jumbotron"><br><br><br><br><br><br><br><br><br><br>
             <centre>
-                <p><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href = "https://www.selfstudys.com/page/cbse-class-10th-study-materials">CBSE</a>&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href = "https://www.selfstudys.com/page/icse-class-10-study-material">ICSE</a></h1></p>
+                <p><h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a class="und" href = "https://www.selfstudys.com/page/cbse-class-10th-study-materials">CBSE</a>&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a class="und" href = "https://www.selfstudys.com/page/icse-class-10-study-material">ICSE</a></h1></p>
             </centre>
             
 
